Get proton, telos, and wax balances and prices
